# DyeLeS

./: .gitignore  CHANGELOG.md  README.md  app-api.py  app-front.py  app_api.py  app_web.py  pyproject.toml  sample.csv  sample_output.csv  setup.py  test_api.sh  webserver.py  webserver_utils.py
configs/: server.yaml  web.yaml
dyeles/: __init__.py  cli.py  ml.py  utils.py
dyeles/resources/: lightgbm.pkl  lightgbm_cls.pkl  lightgbm_shapley.pkl  v3_canonicalized.csv
notebooks/: atlas.ipynb  ml-cls.ipynb  ml-pred-shapley.ipynb  ml-pred.ipynb  ml.ipynb  pick_top.ipynb  screen.ipynb  screen_result.csv  top50.csv  tutorials.ipynb  validation.ipynb  validation_zinc.ipynb  visualize_processed_data.ipynb  visualize_processed_data_3_data.ipynb
notebooks/abs/: bit_0.txt
notebooks/em/: bit_0.txt
notebooks/shapley_case/: bit_0.txt  bit_10.txt  bit_11.txt  bit_1111.txt  bit_1119.txt  bit_1123.txt  bit_12.txt  bit_13.txt  bit_1811.txt  bit_1888.txt  bit_199.txt  bit_3.txt  bit_33.txt  bit_3333.txt  bit_3334.txt  bit_3344.txt  bit_4.txt  bit_555.txt  bit_56.txt  bit_6.txt  bit_77.txt  bit_8.txt  bit_88.txt  bit_9.txt  bit_99.txt
scripts/: pre_chembl.py  pre_coconut.py  pre_dyes.py  pre_npatlas.py  pre_zinc.py  screen_chembl.py  train_model.py
